{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "SpaceshipControl",
            "id": "41b1c4c8-1b68-4caa-82ed-685488ac45c0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "5d349606-868c-4db7-8ad5-2fd144465c3c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayTurn",
                    "type": "Button",
                    "id": "0d5ad4a7-9f8f-48c4-bd29-19cac49d81d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "AdaptCamera",
                    "type": "Button",
                    "id": "f72b0a9a-b723-4d46-af09-222c2dd12aaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4bc09ff2-51ed-46e9-af5f-79e35201ed62",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f2b12385-34ee-4010-933f-eba00dfb03f2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "77123ef0-f021-4725-89c4-67d1c42ff300",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5e26b95b-0d28-4c4f-88c8-12c0aa046c6a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d8226a49-be78-4db4-9389-7f2fa2593b9c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "eb0f971e-7c5a-40b4-bbd2-04e228f8f564",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11d1b30a-e3b9-4742-9081-02c2c4a9fd2e",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AdaptCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}